--- a/index.html
+++ b/index.html
@@ -46,8 +46,31 @@
 
             </div>
         </section>
-        <section id="about">s</section>
-        <section id="skills">ss</section>
+        <section id="about">
+                <section id="about_image">
+                     <h1>About Me</h1>
+                </section>
+                <section id="about_Desc"> 
+                     <span>About Personal</span><br>
+                     <b>Hello, I'm Shailesh</b><br>
+                     <b>Singh</b><br>
+                     <hr> 
+                     <p>
+                        A passionate Graphic Designer and Web Developer with a flair for creativity and a love for crafting visually 
+                        captivating and user-friendly designs. My journey bridges the artistic and technical, blending aesthetics with 
+                        functionality to bring ideas to life on screen and beyond.
+                        Whether it’s designing immersive graphics, building dynamic websites, or creating seamless user experiences, 
+                        I approach every project with dedication and innovation. Let’s create something remarkable together!
+                    </p>
+                    <span>SRSingh</span><br>
+                    <input type="button" value="more" id="moreButton">
+                </section>  
+        </section>
+        <section id="skills">
+               <section id="skill_container">
+                  
+               </section>
+        </section>
         <section id="services">sss</section>
         <section id="contact">ssss</section>
         <footer></footer>
